--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "flag-icons": "^6.6.6",
+    "form-data": "^4.0.0",
     "mdb-ui-kit": "^6.0.0",
     "mdb-vue-ui-kit": "^3.1.0",
     "mysql2": "^2.3.3",
