--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -7,6 +7,7 @@
     "module": "esnext",
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
   }
 }
