--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "build-only": "vite build --outDir dist/prod/server --ssr src/server.ts",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false --traceResolution",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --ignore-pattern vite.config.js"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "dependencies": {
     "axios": "^1.1.3",
