--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/vue": "^2.0.0",
     "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
     "express": "^4.18.2",
