--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/vue": "^2.0.0",
+    "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "flag-icons": "^6.6.6",
     "form-data": "^4.0.0",
     "mdb-ui-kit": "^6.0.0",
@@ -28,6 +32,7 @@
     "mysql2": "^2.3.3",
     "pinia": "^2.0.23",
     "sequelize": "^6.25.3",
+    "uuid": "^9.0.0",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5"
