--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "uuid": "^9.0.0",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
