--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "flag-icons": "^6.6.6",
     "form-data": "^4.0.0",
+    "jspdf": "^2.5.1",
     "mdb-ui-kit": "^6.0.0",
     "mdb-vue-ui-kit": "^3.1.0",
     "mysql2": "^2.3.3",
@@ -36,7 +37,8 @@
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vuetify": "^3.0.1"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
