--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "flag-icons": "^6.6.6",
     "form-data": "^4.0.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
+    "lodash": "^4.17.21",
     "mdb-ui-kit": "^6.0.0",
     "mdb-vue-ui-kit": "^3.1.0",
     "mysql2": "^2.3.3",
