--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "mdb-ui-kit": "^6.0.0",
     "mdb-vue-ui-kit": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "pinia": "^2.0.23",
     "sequelize": "^6.25.3",
