update vite devserver part

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env CTX=development node server",
-    "build:client": "cross-env CTX=production vite build --outDir dist/prod/client",
+    "start": "cross-env CTX=production node server",
+    "build:client": "cross-env CTX=production vite build --outDir dist/prod/client --ssrManifest",
     "build:server": "cross-env CTX=production run-p type-check build-only",
-    "build": "run-p type-check build-only",
+    "build": "run-p type-check build:client build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
-    "build-only": "vite build --outDir dist/prod/server --ssr src/server.ts",
+    "build-only": "vite build --outDir dist/prod/server --ssr src/server.js",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false --traceResolution",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
@@ -36,8 +37,11 @@
     "mysql2": "^2.3.3",
     "pinia": "^2.0.23",
     "sequelize": "^6.25.3",
+    "serve-static": "^1.15.0",
     "uuid": "^9.0.0",
+    "vite-plugin-html-template": "^0.1.0",
     "vue": "^3.2.41",
+    "vue-client-only": "^2.1.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.6",
