--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env CTX=development node server",
     "start": "cross-env CTX=production node server",
     "build:client": "cross-env CTX=production vite build --outDir dist/prod/client --ssrManifest",
-    "build:server": "cross-env CTX=production run-p type-check build-only",
+    "build:server": "cross-env CTX=production npm run build-only",
     "build": "run-p type-check build:client build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.9.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "flag-icons": "^6.6.6",
@@ -37,9 +38,8 @@
     "mysql2": "^2.3.3",
     "pinia": "^2.0.23",
     "sequelize": "^6.25.3",
-    "serve-static": "^1.15.0",
+    "sirv": "^2.0.2",
     "uuid": "^9.0.0",
-    "vite-plugin-html-template": "^0.1.0",
     "vue": "^3.2.41",
     "vue-client-only": "^2.1.0",
     "vue-i18n": "^9.2.2",
@@ -70,6 +70,8 @@
     "terser": "^5.15.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
+    "vite-plugin-html-template": "^0.1.0",
+    "vite-plugin-static-copy": "^0.12.0",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
   },
