envs var for db !

--- a/envs/.env
+++ b/envs/.env
@@ -1,2 +1,8 @@
 CLIENT_PROD_PORT=9000
 CLIENT_DEV_PORT=3000
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=easy_compta_v2
+DB_DIALECT=mysql
+DB_PORT=3308
