--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
+    "canvg": "^4.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
