--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.1.3",
     "bootstrap-icons": "^1.9.1",
     "canvg": "^4.0.1",
+    "chart.js": "^3.9.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -42,8 +43,10 @@
     "sirv": "^2.0.2",
     "uuid": "^9.0.0",
     "vue": "^3.2.41",
+    "vue-chartjs": "^4.1.2",
     "vue-client-only": "^2.1.0",
     "vue-i18n": "^9.2.2",
+    "vue-organization-chart": "^1.1.6",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.6",
     "vuetify": "^3.0.1"
