--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "dependencies": {
+    "@mdi/font": "^7.0.96",
+    "@mdi/js": "^7.0.96",
     "@types/express": "^4.17.14",
     "@types/vue": "^2.0.0",
     "@vueuse/core": "^9.5.0",
@@ -42,11 +44,11 @@
     "sequelize": "^6.25.3",
     "sirv": "^2.0.2",
     "uuid": "^9.0.0",
+    "vite-plugin-vuetify": "^1.0.0",
     "vue": "^3.2.41",
     "vue-chartjs": "^4.1.2",
     "vue-client-only": "^2.1.0",
     "vue-i18n": "^9.2.2",
-    "vue-organization-chart": "^1.1.6",
     "vue-router": "^4.1.5",
     "vue-select": "^4.0.0-beta.6",
     "vuetify": "^3.0.1"
